infrastructure/kubernetes/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: murzbul/face-client-api:1.0.13  # Asegúrate de usar la etiqueta correcta
        ports:
        - containerPort: 5000
